--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   },
   "homepage": "https://github.com/davidz2018/mongo-scrape#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "mongoose": "^5.1.5",
-    "request": "^2.87.0"
+    "morgan": "^1.9.0"
   }
 }
